# ReflectiveShadowMapsRemake

./: .clang-tidy  .gitignore  CMakeLists.txt  Sampling.py  readme.md  vcpkg.json
.github/workflows/: cmake.yml
src/: main.cpp
src/assets/: 3.2.1.point_shadows.frag  3.2.1.point_shadows_depth.frag  3.2.1.point_shadows_depth.geom  3.2.1.point_shadows_depth.vert  deffer_point_shadows.frag  deffer_point_shadows_debug.frag  deffer_point_shadows_remake.frag  gBuffer.frag  gBuffer.glsl  gBuffer.vert  lighting_pass.glsl
src/include/controller/: Engine.h  ResourceManager.h
src/include/learnopengl/: model.h
src/include/model/: GameObject.h  Light.h  Material.h  Mesh.h
src/src/controller/: Engine.cpp  ResoureManager.cpp
